cabal-version:      3.0
name:               xmonad-config
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             Decio Soares
maintainer:         decio.msoares@gmail.com
category:           Example
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common base
    ghc-options: -Wall
    default-language: GHC2021

executable xmonad
    import: base
    hs-source-dirs:   src

    build-depends:  
        base,
        containers,
        parsec,
        process,
        xmonad,
        xmonad-contrib,
        xmonad-extras

    main-is: XMonadConfig.hs